--- a/web/app/assets/angular/views/home.html
+++ b/web/app/assets/angular/views/home.html
@@ -170,7 +170,6 @@
                 <!-- section title -->
                 <div class="title text-center"  >
                     <h2>We Are Bingo Agency</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam reprehenderit accusamus labore iusto, aut, eum itaque illo totam tempora eius.</p>
                     <div class="border"></div>
                 </div>
                 <!-- /section title -->
@@ -180,11 +179,11 @@
                 </div>
                 <div class="col-md-6">
                     <ul class="checklist">
-                        <li>Donec sed odio dui. Aenean eu leo quam. Pellentesque ornare sem laca quam venenatis vestibulum.</li>
-                        <li>Aenean quam. Pellentesque ornare sem laca quam venenatis vestibulum.</li>
-                        <li>Donec sed odio dui. Aenean eu leo quam. Pellentesque ornare sem laca quam venenatis vestibulum.</li>
-                        <li>Etiam porta sem multipage evint landing magna mollis euismod a pharetra augue.</li>
-                        <li>Aenean quam. Pellentesque ornare sem laca quam venenatis vestibulum.</li>
+                        <li>Our turn around time is minimum with full assurance on quality.</li>
+                        <li>Our charges are very affordable unlike others in the market.</li>
+                        <li>We offer 24X7 customer support to answer to your queries whenever required.</li>
+                        <li>We offer industry-specific software development services.</li>
+                        <li>Our developers are keen on developing interactive software mobile apps too.</li>
                     </ul>
                     <a href="#" class="btn btn-main mt-20">Learn More</a>
                 </div>
@@ -266,29 +265,23 @@
                                 <h3>Cups of Coffee</h3>
                             </div>
                         </div>
-                        <!-- end fourth count item -->
-                    </div> 		<!-- end row -->
-                </div>   	<!-- end container -->
-            </section>   <!-- end section -->
+                    </div> 	
+                </div> 
+            </section>
     
     <!-- Start Testimonial
     =========================================== -->
             
-        <section class="testimonial section" id="testimonial">
+        <!-- <section class="testimonial section" id="testimonial">
             <div class="container">
                 <div class="row">				
                     <div class="col-lg-12">
-                        <!-- testimonial wrapper -->
                         <div class="testimonial-slider">
-                            <!-- testimonial single -->
                             <div class="item text-center">
                                 <i class="tf-ion-chatbubbles"></i>
-                                <!-- client info -->
                                 <div class="client-details">
                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum nulla, soluta dolorum. Eos earum, magni asperiores, unde corporis labore, enim, voluptatum officiis voluptates alias natus. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia, officia. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod, quia?</p>
                                 </div>
-                                <!-- /client info -->
-                                <!-- client photo -->
                                 <div class="client-thumb">
                                     <img src="/app/assets/angular/images/akshay.png" class="img-responsive" alt="">
                                 </div>
@@ -296,19 +289,14 @@
                                     <h3>Akshay Soni</h3>
                                     <span>CEO</span>
                                 </div>
-                                <!-- /client photo -->
                             </div>
-                            <!-- /testimonial single -->
-                    
+                            
                             
                             <div class="item text-center">
                                 <i class="tf-ion-chatbubbles"></i>
-                                <!-- client info -->
                                 <div class="client-details">
                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum nulla, soluta dolorum. Eos earum, magni asperiores, unde corporis labore, enim, voluptatum officiis voluptates alias natus. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia, officia. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod, quia?</p>
                                 </div>
-                                <!-- /client info -->
-                                <!-- client photo -->
                                 <div class="client-thumb">
                                     <img src="/app/assets/angular/images/client-logo/clients-1.jpg" class="img-responsive" alt="">
                                 </div>
@@ -317,29 +305,24 @@
                                     <span>CEO , Company Name</span>
                                 </div>
                             </div>
-                            <!-- /testimonial single -->
                         </div>
-                    </div> 		<!-- end col lg 12 -->
-                </div>	    <!-- End row -->
-            </div>       <!-- End container -->
-        </section>    <!-- End Section -->
-    
+                    </div> 		
+                </div>	    
+            </div>       
+        </section> 
+     -->
     <!--
             Start Blog Section
             =========================================== -->
-                    
+<!--                     
         <section class="blog" id="blog">
             <div class="container">
                 <div class="row">
-    
-                    <!-- section title -->
                     <div class="title text-center ">
                         <h2> Latest <span class="color">Posts</span></h2>
                         <div class="border"></div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus facere accusamus, reprehenderit libero inventore nam.</p>
                     </div>
-                    <!-- /section title -->
-                    <!-- single blog post -->
                     <article class="col-md-4 col-sm-6 col-xs-12 clearfix " >
                         <div class="post-item">
                             <div class="media-wrapper">
@@ -353,9 +336,6 @@
                             </div>
                         </div>						
                     </article>
-                    <!-- /single blog post -->
-                    
-                    <!-- single blog post -->
                     <article class="col-md-4 col-sm-6 col-xs-12 "  >
                         <div class="post-item">
                             <div class="media-wrapper">
@@ -369,9 +349,6 @@
                             </div>
                         </div>						
                     </article>
-                    <!-- end single blog post -->
-                    
-                    <!-- single blog post -->
                     <article class="col-md-4 col-sm-6 col-xs-12 "  >
                         <div class="post-item">
                             <div class="media-wrapper">
@@ -385,10 +362,9 @@
                             </div>
                         </div>						
                     </article>
-                    <!-- end single blog post -->
-                </div> <!-- end row -->
-            </div> <!-- end container -->
-        </section> <!-- end section -->
+                </div>
+            </div>
+        </section> -->
     
     <footer id="footer" class="bg-one">
       <div class="top-footer">
@@ -396,7 +372,7 @@
           <div class="row">
             <div class="col-sm-3 col-md-3 col-lg-3">
               <h3>about</h3>
-              <p>Integer posuere erat a ante venenati dapibus posuere velit aliquet. Fusce dapibus, tellus cursus commodo, tortor mauris sed posuere.</p>
+              <p>We have been applying the cutting edge of technology to power digital transformation in the field of technology and global corporations alike — across all major platforms and tech stacks.</p>
             </div>
             <!-- End of .col-sm-3 -->
     
