--- a/web/app/assets/angular/views/header.html
+++ b/web/app/assets/angular/views/header.html
@@ -1,88 +1,53 @@
-<section id="topbar" class="d-none d-lg-block">
-    <div class="container clearfix">
-        <div class="contact-info float-left">
-            <i class="fa fa-envelope-o"></i> <a href="mailto:akkiymail@gmail.com">akkiymail@gmail.com</a>
-            <i class="fa fa-phone"></i> +91-7877439550
-        </div>
-        <div class="social-links float-right">
-            <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
-            <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
-            <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
-            <a href="#" class="google-plus"><i class="fa fa-google-plus"></i></a>
-            <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
-        </div>
+<div id="preloader">
+    <div class='preloader'>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
     </div>
-</section>     
-<!-- <header id="header">
+</div>
+<header class="navigation navbar navbar-fixed-top ">
     <div class="container">
-    <div id="logo" class="pull-left">
-        <h1><a href="#body" class="scrollto">Growni<span style="font-size: 45px;">X</span></a></h1>
-    </div>
-    <nav id="nav-menu-container">
-        <ul class="nav-menu">
-            <li class="menu-active"><a href="#body">Home</a></li>
-            <li><a href="#about">About Us</a></li>
-            <li><a href="#services">Services</a></li>
-            <li><a href="#portfolio">Portfolio</a></li>
-            <li><a href="#team">Team</a></li>
-            
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
-</header> -->
-<nav class="navbar navbar-default">
-        <div class="container-fluid">
-          <!-- Brand and toggle get grouped for better mobile display -->
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Brand</a>
-          </div>
-      
-          <!-- Collect the nav links, forms, and other content for toggling -->
-          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-              <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-              <li><a href="#">Link</a></li>
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">Action</a></li>
-                  <li><a href="#">Another action</a></li>
-                  <li><a href="#">Something else here</a></li>
-                  <li role="separator" class="divider"></li>
-                  <li><a href="#">Separated link</a></li>
-                  <li role="separator" class="divider"></li>
-                  <li><a href="#">One more separated link</a></li>
-                </ul>
-              </li>
+            <h2 class="navbar-brand logo color-white" style="font-size: 30px; padding-top: 15px; font-size: 42px;
+                line-height: 1; margin: 0px;">
+                Growni<span class="color-green">X</span>
+            </h2>
+        </div>
+        <nav class="collapse navbar-collapse navbar-right">
+            <ul id="nav" class="nav navbar-nav menu">
+                <!-- <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Homepage <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="index.html">Homepage</a></li>
+                        <li><a href="index-text.html">Homepage 2</a></li>
+                        <li><a href="onepage-slider.html">Onepage</a></li>
+                        <li><a href="onepage-text.html">Onepage 2</a></li>
+                    </ul>
+                </li> -->
+                <li><a href="/secure/home">Home</a></li>
+                <li><a href="/secure/about">About Us</a></li>
+                <li><a href="/secure/service">Services</a></li>
+                <li><a href="/secure/portfolio">Portfolio</a></li>
+                <li><a href="/secure/team">Team</a></li>
+                <li><a href="/secure/contact">Contact</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tools <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="404.html">404 Page</a></li>
+                        <li><a href="blog.html">Blog Page</a></li>
+                    </ul>
+                </li>
+                </li>
             </ul>
-            <form class="navbar-form navbar-left">
-              <div class="form-group">
-                <input type="text" class="form-control" placeholder="Search">
-              </div>
-              <button type="submit" class="btn btn-default">Submit</button>
-            </form>
-            <ul class="nav navbar-nav navbar-right">
-              <li><a href="#">Link</a></li>
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">Action</a></li>
-                  <li><a href="#">Another action</a></li>
-                  <li><a href="#">Something else here</a></li>
-                  <li role="separator" class="divider"></li>
-                  <li><a href="#">Separated link</a></li>
-                </ul>
-              </li>
-            </ul>
-          </div><!-- /.navbar-collapse -->
-        </div><!-- /.container-fluid -->
-      </nav>
-    
-    
-    
+        </nav>
+    </div>
+</header>
