--- a/web/app/assets/angular/views/home.html
+++ b/web/app/assets/angular/views/home.html
@@ -1,108 +1,24 @@
-
- <!--
-  Start Preloader
-  ==================================== -->
-  <div id="preloader">
-        <div class='preloader'>
-          <span></span>
-          <span></span>
-          <span></span>
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
-      </div> 
-      <!--
-      End Preloader
-      ==================================== -->
+<div ng-include="'/app/assets/angular/views/header.html'" ng-controller="HeaderCtrl"></div>
     
-    
-      
-    
-    <!--
-    Fixed Navigation
-    ==================================== -->
-    <header class="navigation navbar navbar-fixed-top">
-       <div class="container">
-          <div class="navbar-header">
-             <!-- responsive nav button -->
-             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-             <span class="sr-only">Toggle navigation</span>
-             <span class="icon-bar"></span>
-             <span class="icon-bar"></span>
-             <span class="icon-bar"></span>
-             </button>
-             <!-- /responsive nav button -->
-             <!-- logo -->
-             <h2 class="navbar-brand logo color-white" style="font-size: 30px; padding-top: 15px; font-size: 42px;
-                line-height: 1; margin: 0px;">
-                 Growni<span class="color-green">X</span>
-                <!-- <img class="logo-default" src="/app/assets/angular/images/logo.png" alt="logo" /> -->
-                <!-- <img class="logo-white" src="images/logo-white.png" alt="logo" /> -->
-             </h2>
-             <!-- /logo -->
-          </div>
-          <!-- main nav -->
-          <nav class="collapse navbar-collapse navbar-right">
-             <ul id="nav" class="nav navbar-nav menu">
-                   <li class="dropdown">
-                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Homepage <span class="caret"></span></a>
-                      <ul class="dropdown-menu">
-                         <li><a href="index.html">Homepage</a></li>
-                         <li><a href="index-text.html">Homepage 2</a></li>
-                         <li><a href="onepage-slider.html">Onepage</a></li>
-                         <li><a href="onepage-text.html">Onepage 2</a></li>
-                      </ul>
-                   </li>
-                   <li><a href="about.html">About Us</a></li>
-                   <li><a href="service.html">Services</a></li>
-                   <li><a href="portfolio.html">Portfolio</a></li>
-                   <li><a href="team.html">Team</a></li>
-                   <li><a href="pricing.html">Pricing</a></li>
-                   <li><a href="contact.html">Contact</a></li>
-                   <li class="dropdown">
-                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Pages <span class="caret"></span></a>
-                      <ul class="dropdown-menu">
-                         <li><a href="404.html">404 Page</a></li>
-                         <li><a href="blog.html">Blog Page</a></li>
-                      </ul>
-                   </li>
-                </li>
-             </ul>
-          </nav>
-          <!-- /main nav -->
-       </div>
-    </header>
-    <!--
-    End Fixed Navigation
-    ==================================== -->
-    
-    
-    
-    
-         <!--
-    Welcome Slider
-    ==================================== -->
-    
-    <section class="hero-area">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="block">
-                        <h1 class="wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s" style="text-transform: none;">Making <span class="color-green">your ideas</span> <br> happen!</h1>
-                        <ul class="list-inline wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".7s">
-                            <li>
-                                <a data-scroll href="#services" class="btn btn-main">Explore Us</a>		
-                            </li>
-                            <li>
-                                <a data-scroll href="#team" class="btn btn-transparent">Contact Us</a>			
-                            </li>
-                        </ul>
-                    </div>
+<section class="hero-area">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="block">
+                    <h1 class="wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s" style="text-transform: none;">Making <span class="color-green">your ideas</span> <br> happen!</h1>
+                    <ul class="list-inline wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".7s">
+                        <li>
+                            <a data-scroll href="#services" class="btn btn-main">Explore Us</a>		
+                        </li>
+                        <li>
+                            <a data-scroll href="/secure/contact" class="btn btn-transparent">Contact Us</a>			
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
-    </section>	
+    </div>
+</section>	
     
     
     <!--
@@ -365,59 +281,6 @@
                 </div>
             </div>
         </section> -->
+<div ng-include="'/app/assets/angular/views/footer.html'"></div>
     
-    <footer id="footer" class="bg-one">
-      <div class="top-footer">
-        <div class="container">
-          <div class="row">
-            <div class="col-sm-3 col-md-3 col-lg-3">
-              <h3>about</h3>
-              <p>We have been applying the cutting edge of technology to power digital transformation in the field of technology and global corporations alike — across all major platforms and tech stacks.</p>
-            </div>
-            <!-- End of .col-sm-3 -->
-    
-            <div class="col-sm-3 col-md-3 col-lg-3">
-              <ul>
-                <li><h3>Our Services</h3></li>
-                <li><a href="#">Graphic Design</a></li>
-                <li><a href="#">Web Design</a></li>
-                <li><a href="#">Web Development</a></li>
-                <li><a href="#">Automating Testing, QA</a></li>
-                <li><a href="#">Business Intelligence</a></li>
-                <li><a href="#">Social Marketing</a></li>
-
-              </ul>
-            </div>
-            <!-- End of .col-sm-3 -->
-    
-            <div class="col-sm-3 col-md-3 col-lg-3">
-              <ul>
-                <li><h3>Quick Links</h3></li>
-                <li><a href="#">Partners</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">FAQ’s</a></li>
-                <li><a href="#">Badges</a></li>
-              </ul>
-            </div>
-            <!-- End of .col-sm-3 -->
-    
-            <div class="col-sm-3 col-md-3 col-lg-3">
-              <ul>
-                <li><h3>Connect with us Socially</h3></li>
-                <li><a href="#" class="twitter"><i class="fa fa-twitter w15 mr5"></i>   Twitter</a></li>
-                <li><a href="#" class="facebook"><i class="fa fa-facebook w15  mr5"></i> Facebook</a></li>
-                <li><a href="#" class="instagram"><i class="fa fa-instagram w15  mr5"></i> Instagram</a></li>
-                <li><a href="#" class="google-plus"><i class="fa fa-google-plus w15  mr5"></i> Google Plus</a></li>
-                <li><a href="#" class="linkedin"><i class="fa fa-linkedin w15 mr5"></i> LinkedIn</a></li>
-              </ul>
-            </div>
-            <!-- End of .col-sm-3 -->
-    
-          </div>
-        </div> <!-- end container -->
-      </div>
-      <div class="footer-bottom">
-        <h5>Copyright 2018. All rights reserved.</h5>
-      </div>
-    </footer> <!-- end footer -->
-    
+   
