New Team Changes

--- a/web/app/assets/angular/views/footer.html
+++ b/web/app/assets/angular/views/footer.html
@@ -11,12 +11,12 @@
                         <li>
                             <h3>Our Services</h3>
                         </li>
-                        <li><a href="#">Graphic Design</a></li>
-                        <li><a href="#">Web Design</a></li>
-                        <li><a href="#">Web Development</a></li>
-                        <li><a href="#">Automating Testing, QA</a></li>
-                        <li><a href="#">Business Intelligence</a></li>
-                        <li><a href="#">Social Marketing</a></li>
+                        <li><a href="/secure/service">Graphic Design</a></li>
+                        <li><a href="/secure/service">Web Design</a></li>
+                        <li><a href="/secure/service">Web Development</a></li>
+                        <li><a href="/secure/service">Automating Testing, QA</a></li>
+                        <li><a href="/secure/service">Business Intelligence</a></li>
+                        <li><a href="/secure/service">Show more...</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-3 col-md-3 col-lg-3">
