--- a/web/app/assets/angular/views/team.html
+++ b/web/app/assets/angular/views/team.html
@@ -18,10 +18,10 @@
                 <div class="testimonial-slider">
                     <div class="item text-center">
                         <div class="col-sm-12">
-                            <i class="tf-ion-social-facebook"></i>
-                            <i class="tf-ion-social-twitter"></i>
-                            <i class="tf-ion-social-dribbble-outline"></i>
-                            <i class="tf-ion-social-linkedin-outline"></i>    
+                            <a href="tel:+917877439550" tooltip-animation="true" tooltip-placement="bottom" uib-tooltip="+917877439550"><i class="fa fa-phone"></i></a>
+                            <a href="https://www.facebook.com/akkiymail" target="_blank"><i class="tf-ion-social-facebook"></i></a>
+                            <a href="https://twitter.com/akkiysoni" target="_blank"><i class="tf-ion-social-twitter"></i></a>
+                            <a href="https://www.linkedin.com/in/akshay-soni" target="_blank"><i class="tf-ion-social-linkedin-outline"></i></a>  
                         </div>
                         <div class="client-details">
                             <p>Akshay Soni is the founder and Chief Technical Officer of the Grownix Solution who is holding the B-Tech degree in Computer Science. He is a entrepreneur who love to build product, friend of neat computer architecture and efficient implementation. Building great product and finding their sweet spot is what driven him. One of the guy who likes cars and loves to cook food.</p>
@@ -38,10 +38,10 @@
                     
                     <div class="item text-center">
                         <div class="col-sm-12">
-                            <i class="tf-ion-social-facebook"></i>
-                            <i class="tf-ion-social-twitter"></i>
-                            <i class="tf-ion-social-dribbble-outline"></i>
-                            <i class="tf-ion-social-linkedin-outline"></i>    
+                            <a href="tel:+919571785777" tooltip-animation="true" tooltip-placement="bottom" uib-tooltip="+919571785777"><i class="fa fa-phone"></i></a>
+                            <a href="https://www.facebook.com/vinivjy" target="_blank"><i class="tf-ion-social-facebook"></i></a>
+                            <a href="https://twitter.com/" target="_blank"><i class="tf-ion-social-twitter"></i></a>
+                            <a href="https://www.linkedin.com/in/vineet-vijay-b50a8955/" target="_blank"><i class="tf-ion-social-linkedin-outline"></i></a>     
                         </div>
                         <div class="client-details">
                             <p>Vineet Vijay is the Chief Executive Officer of the Grownix Solution who is holding the B-Tech degree in Electronics. He sets the vision and direction for the team, and oversees all company strategy, business activities and operation. Playing cricket tournaments and singing are his favourite hobbies.</p>
