--- a/web/app/assets/angular/views/home.html
+++ b/web/app/assets/angular/views/home.html
@@ -7,7 +7,7 @@
                         <h1 class="wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s" style="text-transform: none;">Making <span class="color-green">your ideas</span> <br> happen!</h1>
                         <ul class="list-inline wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".7s">
                             <li>
-                                <a data-scroll href="#services" class="btn btn-main">Explore Us</a>		
+                                <a data-scroll href="" ng-click="goToExplore()" class="btn btn-main">Explore Us</a>		
                             </li>
                             <li>
                                 <a data-scroll href="/secure/contact" class="btn btn-transparent">Contact Us</a>			
@@ -18,7 +18,7 @@
             </div>
         </div>
     </section>
-    <section class="service-2 section">
+    <section class="service-2 section" id="productFolio">
         <div class="container">
             <div class="row">
                 <div class="title text-center"  >
