--- a/web/app/assets/angular/views/contact.html
+++ b/web/app/assets/angular/views/contact.html
@@ -12,19 +12,19 @@
                 <ul class="contact-short-info">
                     <li>
                         <i class="tf-ion-ios-home"></i>
-                        <span>Grownix Solution, Vijay Path, Sodala, Jaipur, Rajasthan</span>
+                        <span>&nbsp;&nbsp;Grownix Solution, Vijay Path, Sodala, Jaipur, Rajasthan</span>
                     </li>
                     <li>
                         <i class="tf-ion-android-phone-portrait"></i>
-                        <span>Phone: +91-7877439550 / +91-9571785777</span>
+                        <span>&nbsp;&nbsp;&nbsp;Phone: +91-9079388703</span>
                     </li>
                     <li>
                         <i class="tf-ion-android-globe"></i>
-                        <span>Fax: +91-7877439550</span>
+                        <span>&nbsp;&nbsp;Fax: +91-9079388703</span>
                     </li>
                     <li>
                         <i class="tf-ion-android-mail"></i>
-                        <span>Email: mailakkiy@gmail.com</span>
+                        <span>&nbsp;Email: contact@grownixindia.com</span>
                     </li>
                 </ul>
                 <div class="social-icon">
@@ -56,12 +56,6 @@
                         </div>
                     <div class="form-group">
                         <textarea rows="6" placeholder="Message" class="form-control" name="message" id="message"></textarea>	
-                    </div>
-                    <div id="mail-success" class="success">
-                        Thank you. The Mailman is on His Way :)
-                    </div>
-                    <div id="mail-fail" class="error">
-                        Sorry, don't know what happened. Try later :(
                     </div>
                     <div id="cf-submit">
                         <input type="submit" id="contact-submit" class="btn btn-transparent" value="Submit">
