--- a/web/app/assets/angular/views/team.html
+++ b/web/app/assets/angular/views/team.html
@@ -18,7 +18,7 @@
                 <div class="testimonial-slider">
                     <div class="item text-center">
                         <div class="col-sm-12">
-                            <a href="tel:+917877439550" tooltip-animation="true" tooltip-placement="bottom" uib-tooltip="+917877439550"><i class="fa fa-phone"></i></a>
+                            <!-- <a href="tel:+917877439" tooltip-animation="true" tooltip-placement="bottom" uib-tooltip="+917877439"><i class="fa fa-phone"></i></a> -->
                             <a href="https://www.facebook.com/akkiymail" target="_blank"><i class="tf-ion-social-facebook"></i></a>
                             <a href="https://twitter.com/akkiysoni" target="_blank"><i class="tf-ion-social-twitter"></i></a>
                             <a href="https://www.linkedin.com/in/akshay-soni" target="_blank"><i class="tf-ion-social-linkedin-outline"></i></a>  
@@ -38,7 +38,7 @@
                     
                     <div class="item text-center">
                         <div class="col-sm-12">
-                            <a href="tel:+919571785777" tooltip-animation="true" tooltip-placement="bottom" uib-tooltip="+919571785777"><i class="fa fa-phone"></i></a>
+                            <!-- <a href="tel:+919571785" tooltip-animation="true" tooltip-placement="bottom" uib-tooltip="+919571785"><i class="fa fa-phone"></i></a> -->
                             <a href="https://www.facebook.com/vinivjy" target="_blank"><i class="tf-ion-social-facebook"></i></a>
                             <a href="https://twitter.com/" target="_blank"><i class="tf-ion-social-twitter"></i></a>
                             <a href="https://www.linkedin.com/in/vineet-vijay-b50a8955/" target="_blank"><i class="tf-ion-social-linkedin-outline"></i></a>     
