--- a/web/app/assets/angular/views/header.html
+++ b/web/app/assets/angular/views/header.html
@@ -43,7 +43,7 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tools <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="404.html">404 Page</a></li>
-                        <li><a href="blog.html">Blog Page</a></li>
+                        <li><a href="" ng-click="openPayment()">Pay or Donate</a></li>
                     </ul>
                 </li>
                 </li>
