--- a/web/app/assets/angular/views/contact.html
+++ b/web/app/assets/angular/views/contact.html
@@ -58,7 +58,7 @@
                         <textarea rows="6" placeholder="Message" class="form-control" name="message" id="message"></textarea>	
                     </div>
                     <div id="cf-submit">
-                        <input type="submit" id="contact-submit" class="btn btn-transparent" value="Submit">
+                        <input type="submit" id="contact-submit" class="btn btn-transparent" value="Submit" ng-click="sendEmail()">
                     </div>
                 </form>
             </div>
