--- a/web/app/assets/angular/views/header.html
+++ b/web/app/assets/angular/views/header.html
@@ -24,15 +24,6 @@
         </div>
         <nav class="collapse navbar-collapse navbar-right">
             <ul id="nav" class="nav navbar-nav menu">
-                <!-- <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Homepage <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="index.html">Homepage</a></li>
-                        <li><a href="index-text.html">Homepage 2</a></li>
-                        <li><a href="onepage-slider.html">Onepage</a></li>
-                        <li><a href="onepage-text.html">Onepage 2</a></li>
-                    </ul>
-                </li> -->
                 <li><a href="/secure/home">Home</a></li>
                 <li><a href="/secure/about">About Us</a></li>
                 <li><a href="/secure/service">Services</a></li>
@@ -42,11 +33,12 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tools <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="404.html">404 Page</a></li>
-                        <li><a href="" ng-click="openPayment()">Pay or Donate</a></li>
+                        <li><a href="404.html">Convert Jar-2-Exe</a></li>
+                        <li><a href="404.html">Convert PDF-To-HTML</a></li>
+                        <li><a href="404.html">Beautify Code</a></li>
                     </ul>
                 </li>
-                </li>
+                <li><a href="" ng-click="openPayment()">Pay</a></li>
             </ul>
         </nav>
     </div>
