--- a/web/app/assets/angular/views/home.html
+++ b/web/app/assets/angular/views/home.html
@@ -83,7 +83,7 @@
                         <li>We offer industry-specific software development services.</li>
                         <li>Our developers are keen on developing interactive software mobile apps too.</li>
                     </ul>
-                    <a href="#" class="btn btn-main mt-20">Learn More</a>
+                    <a href="/secure/service" class="btn btn-main mt-20">Learn More</a>
                 </div>
             </div>
         </div>
@@ -94,7 +94,7 @@
                 <div class="col-md-12 text-center">
                     <h2>Let's Create Something Together</h2>
                     <p>It’s time to turn the design into reality. All the hard work planning now turns into the final product. We develop with due diligence and care ensuring that what is delivered is responsive, scalable, manageable, in budget and of high quality.</p>
-                    <a href="" class="btn btn-main">Contact Us</a>
+                    <a href="/secure/contact" class="btn btn-main">Contact Us</a>
                 </div>
             </div>
         </div>
