--- a/web/app/assets/angular/views/error.html
+++ b/web/app/assets/angular/views/error.html
@@ -1,13 +1,14 @@
 
-	<section class="page-404 section text-center">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12">
-					<h1>404</h1>
-					<h2>Page Not Found</h2>
-  					<p>Sorry, but the page you were trying to view does not exist.</p>
-					<a href="/secure/home" class="btn btn-main mt-20">Go Home</a>
-				</div>
+<section class="page-404 section text-center">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12">
+				<h1>404</h1>
+				<h2>Page Not Found</h2>
+				<p>Sorry, but the page you were trying to view does not exist.</p>
+				<h3>New update coming soon on 15th May 2018!!.</h3>
+				<a href="/secure/home" class="btn btn-main mt-20">Go Home</a>
 			</div>
 		</div>
-	</section>
+	</div>
+</section>
