--- a/web/app/assets/angular/views/contact.html
+++ b/web/app/assets/angular/views/contact.html
@@ -12,7 +12,7 @@
                 <ul class="contact-short-info">
                     <li>
                         <i class="tf-ion-ios-home"></i>
-                        <span>&nbsp;&nbsp;Grownix Solution, Vijay Path, Sodala, Jaipur, Rajasthan</span>
+                        <span>&nbsp;&nbsp;Grownix Solution, Jaipur, Rajasthan</span>
                     </li>
                     <li>
                         <i class="tf-ion-android-phone-portrait"></i>
