--- a/web/app/assets/angular/views/team.html
+++ b/web/app/assets/angular/views/team.html
@@ -24,7 +24,7 @@
                             <a href="https://www.linkedin.com/in/akshay-soni" target="_blank"><i class="tf-ion-social-linkedin-outline"></i></a>  
                         </div>
                         <div class="client-details">
-                            <p>Akshay Soni is the founder and Chief Technical Officer of the Grownix Solution who is holding the B-Tech degree in Computer Science. He is a entrepreneur who love to build product, friend of neat computer architecture and efficient implementation. Building great product and finding their sweet spot is what driven him. One of the guy who likes cars and loves to cook food.</p>
+                            <p>Akshay Soni is the founder and Chief Technical Officer of the Grownix Solution who is holding the B-Tech degree in Computer Science. He is a entrepreneur who love to build product, friend of neat computer architecture and efficient implementation. Building great product and finding their sweet spot is what driven him.</p>
                         </div>
                         <div class="client-thumb">
                             <img src="/app/assets/angular/images/Akshay.png" class="img-responsive" alt="">
@@ -44,7 +44,7 @@
                             <a href="https://www.linkedin.com/in/vineet-vijay-b50a8955/" target="_blank"><i class="tf-ion-social-linkedin-outline"></i></a>     
                         </div>
                         <div class="client-details">
-                            <p>Vineet Vijay is the Chief Executive Officer of the Grownix Solution who is holding the B-Tech degree in Electronics. He sets the vision and direction for the team, and oversees all company strategy, business activities and operation. Playing cricket tournaments and singing are his favourite hobbies.</p>
+                            <p>Vineet Vijay is the Chief Executive Officer of the Grownix Solution who is holding the B-Tech degree in Electronics. He sets the vision and direction for the team, and oversees all company strategy, business activities and operation.</p>
                         </div>
                         <div class="client-thumb">
                                 <img src="/app/assets/angular/images/Vineet.jpeg" class="img-responsive" alt="">
@@ -52,6 +52,24 @@
                         <div class="client-meta">
                             <h3>Vineet Vijay</h3>
                             <h5 class="strong">CEO</h5>
+                        </div>
+                    </div>
+
+                    <div class="item text-center">
+                        <div class="col-sm-12">
+                            <a href="https://www.facebook.com/sandeep.s.shekhawat.7/" target="_blank"><i class="tf-ion-social-facebook"></i></a>
+                            <a href="https://twitter.com/" target="_blank"><i class="tf-ion-social-twitter"></i></a>
+                            <a href="https://www.linkedin.com/in/sandeep-shekhawat-a695b563/" target="_blank"><i class="tf-ion-social-linkedin-outline"></i></a>     
+                        </div>
+                        <div class="client-details">
+                            <p>Sandeep Singh Shekhawat is the Head of Dev Ops and IT team. His focus is to bring out the solution to enhance security, performance, reliability and efficiency of our customer products.</p>
+                        </div>
+                        <div class="client-thumb">
+                            <img src="/app/assets/angular/images/Sandeep.png" class="img-responsive" alt="">
+                        </div>
+                        <div class="client-meta">
+                            <h3>Sandeep Singh Shekhawat</h3>
+                            <h5 class="strong">Dev Ops & IT Head</h5>
                         </div>
                     </div>
                 </div>
