--- a/web/app/assets/angular/views/contact.html
+++ b/web/app/assets/angular/views/contact.html
@@ -29,10 +29,10 @@
                 </ul>
                 <div class="social-icon">
                     <ul>
-                        <li><a href="#"><i class="tf-ion-social-facebook"></i></a></li>
-                        <li><a href="#"><i class="tf-ion-social-twitter"></i></a></li>
-                        <li><a href="#"><i class="tf-ion-social-dribbble-outline"></i></a></li>
-                        <li><a href="#"><i class="tf-ion-social-linkedin-outline"></i></a></li>
+                        <li><a href="https://www.facebook.com/grownixsolution" target="_blank"><i class="tf-ion-social-facebook"></i></a></li>
+                        <li><a href="https://twitter.com/GrownixS" target="_blank"><i class="tf-ion-social-twitter"></i></a></li>
+                        <!-- <li><a href="#"><i class="tf-ion-social-dribbble-outline"></i></a></li> -->
+                        <li><a href="https://www.linkedin.com/in/grownix-solution" target="_blank"><i class="tf-ion-social-linkedin-outline"></i></a></li>
                     </ul>
                 </div>
                 <div class="col-sm-12 plr0">
