--- a/web/app/assets/angular/views/footer.html
+++ b/web/app/assets/angular/views/footer.html
@@ -35,11 +35,11 @@
                         <li>
                             <h3>Connect with us Socially</h3>
                         </li>
-                        <li><a href="#" class="twitter"><i class="fa fa-twitter w15 mr5"></i>   Twitter</a></li>
-                        <li><a href="#" class="facebook"><i class="fa fa-facebook w15  mr5"></i> Facebook</a></li>
-                        <li><a href="#" class="instagram"><i class="fa fa-instagram w15  mr5"></i> Instagram</a></li>
-                        <li><a href="#" class="google-plus"><i class="fa fa-google-plus w15  mr5"></i> Google Plus</a></li>
-                        <li><a href="#" class="linkedin"><i class="fa fa-linkedin w15 mr5"></i> LinkedIn</a></li>
+                        <li><a href="https://twitter.com/GrownixS" class="twitter" target="_blank"><i class="fa fa-twitter w15 mr5"></i>   Twitter</a></li>
+                        <li><a href="https://www.facebook.com/grownixsolution"target="_blank" class="facebook"><i class="fa fa-facebook w15  mr5"></i> Facebook</a></li>
+                        <!-- <li><a href="#" class="instagram"><i class="fa fa-instagram w15  mr5"></i> Instagram</a></li> -->
+                        <!-- <li><a href="#" class="google-plus"><i class="fa fa-google-plus w15  mr5"></i> Google Plus</a></li> -->
+                        <li><a href="https://www.linkedin.com/in/grownix-solution" target="_blank" class="linkedin"><i class="fa fa-linkedin w15 mr5"></i> LinkedIn</a></li>
                     </ul>
                 </div>
             </div>
