--- a/web/app/assets/angular/views/header.html
+++ b/web/app/assets/angular/views/header.html
@@ -30,14 +30,14 @@
                 <li><a href="/secure/portfolio">Portfolio</a></li>
                 <li><a href="/secure/team">Team</a></li>
                 <li><a href="/secure/contact">Contact</a></li>
-                <li class="dropdown">
+                <!-- <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tools <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="404.html">Convert Jar-2-Exe</a></li>
                         <li><a href="404.html">Convert PDF-To-HTML</a></li>
                         <li><a href="404.html">Beautify Code</a></li>
                     </ul>
-                </li>
+                </li> -->
                 <li><a href="" ng-click="openPayment()">Pay</a></li>
             </ul>
         </nav>
